--- a/src/Pages/Authentication/AuthenticationStyle/AuthenticationStyle.css
+++ b/src/Pages/Authentication/AuthenticationStyle/AuthenticationStyle.css
@@ -29,14 +29,15 @@
 }
 
 .auth_form_input_container {
-  box-shadow: #32325d40 0px 6px 12px -2px, #0000004d 0px 3px 7px -3px;
   margin-bottom: 30px;
-  border-radius: 8px;
 }
 
 .auth_form_input_container input {
+  width: 100%;
+  box-shadow: #32325d40 0px 6px 12px -2px, #0000004d 0px 3px 7px -3px;
   padding: 15px 10px;
   outline: none;
+  border-radius: 8px;
 }
 
 .auth_sub_btn {
