Booking table design completed

--- a/src/Pages/Booking/Booking.css
+++ b/src/Pages/Booking/Booking.css
@@ -31,13 +31,86 @@
 }
 
 .booking_title {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  color: #ffffff;
   display: flex;
   align-items: center;
-  padding-left: 50px;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  color: #ffffff;
   font-size: 3.5rem;
   font-weight: 700;
+  padding-left: 50px;
+}
+
+.booking_table_outer_container {
+  height: auto;
+  width: 100%;
+  padding: 50px;
+  margin-top: 100px;
+  border-radius: 8px;
+  background-color: #f8f8f8;
+}
+
+.main_booking_table_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  margin-top: 50px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: #00000030 0px 10px 20px, #0000003b 0px 6px 6px;
+}
+
+.table_image_container {
+  height: 100px;
+}
+
+.table_image_container img {
+  height: 100%;
+  width: 100%;
+  border-radius: 8px;
+}
+
+.tabel_servise_info_container h2 {
+  font-size: 1.5rem;
+  color: #444444;
+  font-weight: 600;
+}
+
+.tabel_servise_info_container h3 {
+  font-size: 1.1rem;
+  color: #8f8f8f;
+}
+
+.tabel_servise_info_container p {
+  font-weight: 600;
+  color: #444444;
+  font-size: 1.2rem;
+}
+
+.table_panding_btn_container {
+  background-color: #FF3811;
+  padding: 6px 20px;
+  color: #ffffff;
+  border-radius: 8px;
+}
+
+.table_delete_btn_container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+  color: #ffffff;
+  padding: 6px 20px;
+  border-radius: 8px;
+  background-color: #e80b0b;
+}
+
+.table_delete_btn_container:active {
+  background-color: #c30909;
+}
+
+.table_delete_btn_container p {
+  font-size: 1.2rem;
 }
